install/kubernetes: Switch to quay.io/cilium/hubble
This switches the Helm chart over to use the image of the open-source
repository of Hubble. Deployments of the Hubble-UI preview still use the
old image as required by the preview.

Signed-off-by: Sebastian Wicki <sebastian@isovalent.com>

--- a/install/kubernetes/hubble/templates/daemonset.yaml
+++ b/install/kubernetes/hubble/templates/daemonset.yaml
@@ -43,8 +43,13 @@ spec:
             {{- end }}
       containers:
       - name: hubble
+{{- if .Values.ui.enabled }}
+        image: "{{ .Values.ui.image.hubble.repository }}:{{ .Values.ui.image.hubble.tag }}"
+        imagePullPolicy: {{ .Values.ui.image.hubble.pullPolicy }}
+{{- else }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+{{- end }}
         command:
         - hubble
         args:
