api: Move "pb.Flow" into its own package
Backwards-compatible move of "pb.Flow" (and related messages) into its
own protobuf package. This separates the data types from the RPC interface
and allows Go packages working solely on the data types to only import
them.

The newly introduced `flow` protobuf package is re-exported in the old
`observer` package, making this a backwards-compatible change.

The `observer.proto` file has been moved such that all Go plugins generate
code in the correct directory. Unfortunately, it seems that we we cannot use
the `paths=source_relative` option of `protoc-gen-go` to solve this without
moving the file, as the option is not supported by our other golang-related
protoc plugins.

Signed-off-by: Sebastian Wicki <sebastian@isovalent.com>

--- a/api/v1/Makefile
+++ b/api/v1/Makefile
@@ -2,19 +2,14 @@
 PROTOC := PATH=.:${PATH} protoc
 
 HUBBLE_PROTO_SOURCES := \
-	./observer.proto
+	./flow/flow.proto \
+	./observer/observer.proto
 
-HUBBLE_PROTO_DIRS := $(sort $(dir $(HUBBLE_PROTO_SOURCES)))
-
-GO_OUT := observer
-
-HUBBLE_GO_TARGETS := $(addprefix $(GO_OUT)/,$(HUBBLE_PROTO_SOURCES:.proto=.pb.go)) \
-	$(addprefix $(GO_OUT)/,$(HUBBLE_PROTO_SOURCES:.proto=.pb.validate.go))
+HUBBLE_GO_TARGETS := $(HUBBLE_PROTO_SOURCES:.proto=.pb.go) $(HUBBLE_PROTO_SOURCES:.proto=.pb.validate.go)
 
 HUBBLE_PROTO_PATH := .
 
 PROTO_DEPS = \
-	-I ../../vendor \
 	-I external
 
 RAW_GO_MAPPINGS := google/protobuf/any.proto=github.com/gogo/protobuf/types/
@@ -22,6 +17,9 @@ RAW_GO_MAPPINGS += google/protobuf/duration.proto=github.com/gogo/protobuf/types
 RAW_GO_MAPPINGS += google/protobuf/struct.proto=github.com/gogo/protobuf/types/
 RAW_GO_MAPPINGS += google/protobuf/timestamp.proto=github.com/gogo/protobuf/types/
 RAW_GO_MAPPINGS += google/protobuf/wrappers.proto=github.com/gogo/protobuf/types/
+
+RAW_GO_MAPPINGS += flow/flow.proto=github.com/cilium/hubble/api/v1/flow/
+RAW_GO_MAPPINGS += observer/observer.proto=github.com/cilium/hubble/api/v1/observer/
 
 # Add mapping separators and remove the trailing slash
 # but first create "/ " and ",M"
@@ -32,8 +30,10 @@ GO_MAPPINGS := $(patsubst %/,%,$(map_sep)$(subst $(file_sep),$(map_sep),$(RAW_GO
 
 $(HUBBLE_GO_TARGETS): $(HUBBLE_PROTO_SOURCES) Makefile deps
 	$(QUIET)set -e; \
-	for path in $(HUBBLE_PROTO_DIRS) ; do \
-		$(PROTOC) -I $(HUBBLE_PROTO_PATH) $(PROTO_DEPS) --go_out=plugins=grpc$(GO_MAPPINGS):$(GO_OUT) --validate_out=lang=go$(GO_MAPPINGS):$(GO_OUT) --go-json_out=orig_name:$(GO_OUT) $${path}*.proto; \
+	for proto in $(HUBBLE_PROTO_SOURCES) ; do \
+		$(PROTOC) -I $(HUBBLE_PROTO_PATH) $(PROTO_DEPS) \
+			--go_out=plugins=grpc$(GO_MAPPINGS):. --validate_out=lang=go$(GO_MAPPINGS):. --go-json_out=orig_name:. \
+			$${proto}; \
 	done
 
 .PHONY: all
@@ -41,7 +41,7 @@ all: $(HUBBLE_GO_TARGETS)
 
 .PHONY: clean
 clean:
-	rm -fr $(GO_OUT)/*
+	rm -f $(HUBBLE_GO_TARGETS)
 
 .PHONY: deps
 deps:
