helm: Enable TCP ports when ui.enable=true
Adds "0.0.0.0:50051" to `listenClientUrls` when `ui.enabled` is true.
This ensures that Hubble exposes its gRPC service via TCP, which is
required for the UI.

In addition, this PR also cleans up the Helm chart with regards to the
UI. The new hubble-all-minikube.yaml has been gerated with the following
command:

    helm template hubble \
         --namespace kube-system \
         --set metrics.enabled="{dns:query,drop,tcp,flow,port-distribution}" \
         --set ui.enabled=true \
         > ../../tutorials/deploy-hubble-servicemap/hubble-all-minikube.yaml

Signed-off-by: Sebastian Wicki <sebastian@isovalent.com>

--- a/install/kubernetes/hubble/templates/daemonset.yaml
+++ b/install/kubernetes/hubble/templates/daemonset.yaml
@@ -43,19 +43,20 @@ spec:
             {{- end }}
       containers:
       - name: hubble
-{{- if .Values.ui.enabled }}
-        image: "{{ .Values.ui.image.hubble.repository }}:{{ .Values.ui.image.hubble.tag }}"
-        imagePullPolicy: {{ .Values.ui.image.hubble.pullPolicy }}
-{{- else }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
-{{- end }}
         command:
         - hubble
         args:
         - serve
 {{- range .Values.listenClientUrls }}
         - --listen-client-urls={{ . }}
+{{- end }}
+{{- if and .Values.ui.enabled (not (has "0.0.0.0:50051" .Values.listenClientUrls)) }}
+        - --listen-client-urls=0.0.0.0:50051
+{{- if not .Values.listenClientUrls }}
+        - --listen-client-urls=unix:///var/run/hubble.sock
+{{- end }}
 {{- end }}
 {{- if .Values.maxFlows }}
         - --max-flows
