actions: Install ineffassign before running unit tests
Install ineffassign in Github unit test workflow.

Signed-off-by: Michal Rostecki <mrostecki@opensuse.org>

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         export PATH=${PATH}:${GOPATH}/bin
         go get -u github.com/golang/dep/cmd/dep
+        go get -u github.com/gordonklaus/ineffassign
         go get -u golang.org/x/lint/golint
         dep check
         make check-fmt lint test
