--- a/install/kubernetes/hubble/values.yaml
+++ b/install/kubernetes/hubble/values.yaml
@@ -33,6 +33,9 @@ metrics:
   enabled:
    - drop
   address: ":6943"
+  # Create a prometheus-operator servicemonitor
+  serviceMonitor:
+    enabled: false
 
 # Configuration for hubble ui
 ui:
