Added Helm Chart value for cluster domain
Signed-off-by: Dan Sexton <dan.b.sexton@gmail.com>

--- a/install/kubernetes/hubble/templates/deployment.yaml
+++ b/install/kubernetes/hubble/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
             - name: HUBBLE
               value: "true"
             - name: HUBBLE_SERVICE
-              value: "hubble-grpc.{{ .Release.Namespace }}.svc.cluster.local"
+              value: "hubble-grpc.{{ .Release.Namespace }}.svc.{{ .Values.ui.clusterDomain }}"
             - name: HUBBLE_PORT
               value: "50051"
           ports:
