Created value for hubble-ui replicas
Signed-off-by: Dan Sexton <dan.b.sexton@gmail.com>

--- a/install/kubernetes/hubble/templates/deployment.yaml
+++ b/install/kubernetes/hubble/templates/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
   name: hubble-ui
 spec:
-  replicas: 1
+  replicas: {{ .Values.ui.replicas }}
   selector:
     matchLabels:
       k8s-app: hubble-ui
