--- a/install/kubernetes/hubble/templates/daemonset.yaml
+++ b/install/kubernetes/hubble/templates/daemonset.yaml
@@ -19,7 +19,9 @@ spec:
         k8s-app: hubble
         kubernetes.io/cluster-service: "true"
     spec:
-      priorityClassName: system-node-critical
+      {{- if .Values.priorityClassName }}
+      priorityClassName: {{ .Values.priorityClassName }}
+      {{- end }}
       affinity:
         podAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
@@ -106,6 +108,8 @@ spec:
       terminationGracePeriodSeconds: 1
       tolerations:
       - operator: Exists
+      resources:
+        {{- toYaml .Values.resources | trim | nindent 8 }}
       volumes:
       - hostPath:
           # We need to access Cilium's monitor socket
