socket: Make the unix domain socket group configurable
Set HUBBLE_GROUP_NAME environment variable to override the group name.

Closes #122

Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/install/kubernetes/hubble/templates/daemonset.yaml
+++ b/install/kubernetes/hubble/templates/daemonset.yaml
@@ -80,6 +80,10 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+{{- if .Values.groupName }}
+          - name: HUBBLE_GROUP_NAME
+            value: {{ .Values.groupName | quote }}
+{{- end }}
         ports:
 {{- if .Values.metrics.enabled }}
         - containerPort: {{ regexReplaceAll ":([0-9]+)$" .Values.metrics.address "${1}" }}
