socket: Make the default server for status/observe configurable
Set HUBBLE_DEFAULT_SOCKET_PATH environment variable to override the
default server for status and observe commands.

Closes #124

Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/install/kubernetes/hubble/templates/daemonset.yaml
+++ b/install/kubernetes/hubble/templates/daemonset.yaml
@@ -84,6 +84,10 @@ spec:
           - name: HUBBLE_GROUP_NAME
             value: {{ .Values.groupName | quote }}
 {{- end }}
+{{- if .Values.defaultServer }}
+          - name: HUBBLE_DEFAULT_SOCKET_PATH
+            value: {{ .Values.defaultServer | quote }}
+{{- end }}
         ports:
 {{- if .Values.metrics.enabled }}
         - containerPort: {{ regexReplaceAll ":([0-9]+)$" .Values.metrics.address "${1}" }}
