actions: go get tools in GOPATH mode
By forcing the GOPATH mode, it ensures the `go.mod` file is not modified
when go getting dev/check tools.

This should fix the test failures with Go 1.14.

Signed-off-by: Robin Hahling <robin.hahling@gw-computing.net>

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -21,6 +21,6 @@ jobs:
         GOPATH: /home/runner/work/hubble/go
       run: |
         export PATH=${PATH}:${GOPATH}/bin
-        go get -u github.com/gordonklaus/ineffassign
-        go get -u golang.org/x/lint/golint
+        GO111MODULE=off go get -u github.com/gordonklaus/ineffassign
+        GO111MODULE=off go get -u golang.org/x/lint/golint
         make check-fmt lint test
