actions: run go vet
The check-fmt is being run as part of the lint target, thus remove it so
that it doesn't run twice.

Signed-off-by: Robin Hahling <robin.hahling@gw-computing.net>

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -23,4 +23,4 @@ jobs:
         export PATH=${PATH}:${GOPATH}/bin
         GO111MODULE=off go get -u github.com/gordonklaus/ineffassign
         GO111MODULE=off go get -u golang.org/x/lint/golint
-        make check-fmt lint test
+        make lint vet test
