--- a/install/kubernetes/hubble/values.yaml
+++ b/install/kubernetes/hubble/values.yaml
@@ -3,7 +3,7 @@ image:
   # repository of the docker image
   repository: quay.io/cilium/hubble
   # tag is the container image tag to use
-  tag: v0.5.0
+  tag: latest
   # pullPolicy is the container image pull policy
   pullPolicy: Always
 
