Clean up Helm templates
- Add a Quickstart section to the documentation.
- Remove all the existing templates since the Hubble server now runs as
  a part of Cilium daemonset.
- Add a new template to deploy Hubble CLI as a daemonset.
- Add a pre-generated YAML to tutorials/explore-flow-queries.

Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/install/kubernetes/hubble/Chart.yaml
+++ b/install/kubernetes/hubble/Chart.yaml
@@ -3,7 +3,7 @@ name: hubble
 version: 0.0.3
 appVersion: 0.0.1
 tillerVersion: ">=2.7.2"
-description: Helm chart for the Hubble server
+description: Helm chart for the Hubble CLI
 keywords:
 sources:
   - https://github.com/cilium/hubble
