--- a/install/kubernetes/hubble/values.yaml
+++ b/install/kubernetes/hubble/values.yaml
@@ -3,9 +3,9 @@ image:
   # repository of the docker image
   repository: quay.io/cilium/hubble
   # tag is the container image tag to use
-  tag: latest
+  tag: v0.5.1
   # pullPolicy is the container image pull policy
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 # URL to listen to client requests. If this parameter is not specified, it
 # defaults to using unix domain socket.
