helm: set hubble-ui securityContext
The image hubble-ui no longer needs run as root user

Signed-off-by: Alex Szakaly <alex.szakaly@gmail.com>

--- a/install/kubernetes/hubble/templates/deployment.yaml
+++ b/install/kubernetes/hubble/templates/deployment.yaml
@@ -18,6 +18,8 @@ spec:
       {{- if and .Values.priorityClassName (eq .Release.Namespace "kube-system") }}
       priorityClassName: {{ .Values.ui.priorityClassName }}
       {{- end }}
+      securityContext:
+        runAsUser: 1001
       serviceAccountName: hubble-ui
       containers:
         - name: hubble-ui
