Ensure we can override the priority class name when running in a namespace other than kube-system
Signed-off-by: Maxime VISONNEAU <maxime.visonneau@gmail.com>

--- a/install/kubernetes/hubble/templates/daemonset.yaml
+++ b/install/kubernetes/hubble/templates/daemonset.yaml
@@ -19,7 +19,7 @@ spec:
         k8s-app: hubble
         kubernetes.io/cluster-service: "true"
     spec:
-      {{- if and .Values.priorityClassName (eq .Release.Namespace "kube-system") }}
+      {{- if .Values.priorityClassName }}
       priorityClassName: {{ .Values.priorityClassName }}
       {{- end }}
       affinity:
