Build release artifacts inside a container
- Use make clean to delete the release directory.
- Rename the current `release` make target to `local-release`, and update
  the `release` target to generate release artifacts from inside Docker.
- Generate release artifacts as a part of the build.

Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -28,3 +28,11 @@ jobs:
         make check
     - name: Run unit tests
       run: make test
+    - name: Generate artifacts
+      run: make release
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      if: success()
+      with:
+        name: release
+        path: release
