Remove contrib/scripts/release.sh
Rename the current `release` make target to `local-release`, and update
the `release` target to generate release artifacts from inside Docker.

Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Run unit tests
       run: make test
     - name: Generate artifacts
-      run: ./contrib/scripts/release.sh
+      run: make release
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       if: success()
