helm: add .Values.grpc.enabled
Before this patch, the only way to enable the hubble-grpc headless
Service was to enable Hubble UI.

This patch allow users to enable the hubble-grpc Service (through
.Values.grpc.enabled) without requiring Hubble UI to be enabled. When
Hubble UI is enabled, the hubble-grpc Service is enabled unconditionally
since UI depends on it.

Signed-off-by: Alexandre Perrin <alex@kaworu.ch>

--- a/install/kubernetes/hubble/templates/daemonset.yaml
+++ b/install/kubernetes/hubble/templates/daemonset.yaml
@@ -50,7 +50,7 @@ spec:
 {{- range .Values.listenClientUrls }}
         - --listen-client-urls={{ . }}
 {{- end }}
-{{- if and .Values.ui.enabled (not (has "0.0.0.0:50051" .Values.listenClientUrls)) }}
+{{- if and (or .Values.grpc.enabled .Values.ui.enabled) (not (has "0.0.0.0:50051" .Values.listenClientUrls)) }}
         - --listen-client-urls=0.0.0.0:50051
 {{- if not .Values.listenClientUrls }}
         - --listen-client-urls=unix:///var/run/hubble.sock
