make: add staticcheck to `make check` target
For now ignore SA1019 (deprecation warnings,
https://staticcheck.io/docs/checks#SA1019) and ST1000 (missing package
comments, https://staticcheck.io/docs/checks#ST1000).

Signed-off-by: Tobias Klauser <tklauser@distanz.ch>

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -25,6 +25,7 @@ jobs:
         export PATH=${PATH}:${GOPATH}/bin
         GO111MODULE=off go get -u github.com/gordonklaus/ineffassign
         GO111MODULE=off go get -u golang.org/x/lint/golint
+        GO111MODULE=off go get -u honnef.co/go/tools/cmd/staticcheck
         make check
     - name: Run unit tests
       run: make test
