doc: set Hubble UI tag to v0.5.0
Hubble UI v0.6.0 expects Hubble Relay and is not compatible with Hubble
standalone.

Signed-off-by: Robin Hahling <robin.hahling@gw-computing.net>

--- a/install/kubernetes/hubble/values.yaml
+++ b/install/kubernetes/hubble/values.yaml
@@ -56,7 +56,7 @@ ui:
     # repository of the docker image
     repository: quay.io/cilium/hubble-ui
     # tag is the container image tag to use
-    tag: latest
+    tag: v0.5.0
     # pullPolicy is the container image pull policy
     pullPolicy: Always
   clusterDomain: cluster.local
