--- a/tutorials/deploy-hubble-servicemap/hubble-all-minikube.yaml
+++ b/tutorials/deploy-hubble-servicemap/hubble-all-minikube.yaml
@@ -244,7 +244,7 @@ spec:
       serviceAccountName: hubble-ui
       containers:
         - name: hubble-ui
-          image: "quay.io/cilium/hubble-ui:latest"
+          image: "quay.io/cilium/hubble-ui:v0.5.0"
           imagePullPolicy: Always
           env:
             - name: NODE_ENV
