--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,5 +16,5 @@ updates:
     open-pull-requests-limit: 1
     rebase-strategy: disabled
     labels:
-    - kind/enhancement
-    - release-note/misc
+    - "📈 kind/enhancement"
+    - "release-note/misc"
