ci: do not upload artifacts
We do not make any use of these artifacts, hence prune the step that
uploads artifacts.

Signed-off-by: Robin Hahling <robin.hahling@gw-computing.net>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,14 +24,8 @@ jobs:
       run: make check
     - name: Run unit tests
       run: make test
-    - name: Generate artifacts
+    - name: Build release binaries
       run: make release
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v2
-      if: success()
-      with:
-        name: release
-        path: release
   go-mod:
     runs-on: ubuntu-latest
     steps:
