ci: build as part of the CI tests
Signed-off-by: Robin Hahling <robin.hahling@gw-computing.net>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,6 +24,8 @@ jobs:
       run: make check
     - name: Run unit tests
       run: make test
+    - name: Build
+      run: make
     - name: Build release binaries
       run: make release
   go-mod:
