Revert "ci: fix dependabot kind/enhancement label"
This reverts commit 0d7fbb978f880e9c345cd3966f3669aecbdaa778.

Signed-off-by: Alexandre Perrin <alex@kaworu.ch>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,5 +16,5 @@ updates:
     open-pull-requests-limit: 1
     rebase-strategy: disabled
     labels:
-    - "📈 kind/enhancement"
-    - "release-note/misc"
+    - kind/enhancement
+    - release-note/misc
