--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,7 @@ jobs:
         go mod tidy
         go mod vendor
         go mod verify
-        git diff --exit-code
+        test -z "$(git status --porcelain)" || (echo "please run 'go mod tidy && go mod vendor', and submit your changes"; exit 1)
     - name: Run unit tests
       run: make test
     - name: Build
