--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,11 +26,9 @@ jobs:
     - name: Run static checks
       uses: golangci/golangci-lint-action@v3.1.0
       with:
-        version: v1.43.0
+        version: v1.44.2
         args: --config=.golangci.yml --verbose
-        skip-go-installation: true
-        skip-pkg-cache: true
-        skip-build-cache: true
+        skip-cache: true
     - name: Check module vendoring
       run: |
         go mod tidy
