--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,13 +22,16 @@ jobs:
     - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
     - uses: actions/setup-go@v2.2.0
       with:
-        go-version: '1.17.8'
+        go-version: '1.18.0'
     - name: Run static checks
-      uses: golangci/golangci-lint-action@v3.1.0
-      with:
-        version: v1.44.2
-        args: --config=.golangci.yml --verbose
-        skip-cache: true
+      # TODO: uncomment config below and remove `run: make check` once a
+      # version of golangci-lint with support for Go 1.18 is released.
+      run: make check
+      # uses: golangci/golangci-lint-action@v3.1.0
+      # with:
+      #   version: v1.44.2
+      #   args: --config=.golangci.yml --verbose
+      #   skip-cache: true
     - name: Check module vendoring
       run: |
         go mod tidy
