--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,8 @@
 # See https://golangci-lint.run/usage/configuration/ for available options.
 # Also https://github.com/cilium/cilium/blob/master/.golangci.yaml as a
 # reference.
+run:
+  timeout: 3m  # default is 1m
 linters:
   disable-all: true
   enable:
@@ -22,18 +24,18 @@ linters:
 
 linters-settings:
   gosimple:
-    go: "1.17"
+    go: "1.18"
   govet:
     enable-all: true
     disable:
       - fieldalignment
       - shadow
   staticcheck:
-    go: "1.17"
+    go: "1.18"
   stylecheck:
-    go: "1.17"
+    go: "1.18"
   unused:
-    go: "1.17"
+    go: "1.18"
 
 issues:
   # Default rules exclude Go doc comments check, which is rather unfortunate.
