ci, make: update golangci-lint to v1.50.1
This will re-enable the contextcheck linter for Go ≥ 1.18.

Update Go compatibility for the gosimple linter to 1.19. This should
have been done in commit 0e85e38c90ed ("Update Go to 1.19").

Remove the deadcode, structcheck and varcheck linters that have
been deprecated since golangci-lint v1.49.0.

Disable the revive linter warnings for missing package level godoc
comments.

Signed-off-by: Tobias Klauser <tobias@cilium.io>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,7 +11,6 @@ linters:
     - bidichk
     - bodyclose
     - contextcheck
-    - deadcode
     - decorder
     - durationcheck
     - errchkjson
@@ -34,19 +33,17 @@ linters:
     - predeclared
     - revive
     - staticcheck
-    - structcheck
     - tenv
     - typecheck
     - unconvert
     - unparam
     - unused
     - usestdlibvars
-    - varcheck
     - wastedassign
 
 linters-settings:
   gosimple:
-    go: "1.18"
+    go: "1.19"
   govet:
     enable-all: true
     disable:
@@ -74,3 +71,5 @@ issues:
       text: "do not define dynamic errors, use wrapped static errors instead"
     - linters: [gosec]
       text: "G402" # TLS InsecureSkipVerify may be true
+    - linters: [revive]
+      text: "should have a package comment"
