ci: enable goheader for license header checks
As a follow-up to commit 13ab3f4893cf7ddb54bfbbf53fcc284a459704a3, add a
CI check to ensure files have the appropriate license header.

Signed-off-by: Robin Hahling <robin.hahling@gw-computing.net>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,6 +19,7 @@ linters:
     - gocritic
     - goerr113
     - gofmt
+    - goheader
     - goimports
     - gosec
     - gosimple
@@ -43,6 +44,13 @@ linters:
     - wastedassign
 
 linters-settings:
+  goheader:
+    values:
+      regexp:
+        PROJECT: 'Cilium|Hubble'
+    template: |-
+      SPDX-License-Identifier: Apache-2.0
+      Copyright Authors of {{ PROJECT }}
   govet:
     enable-all: true
     disable:
