dependabot: add commit message prefixes
Signed-off-by: Alexandre Perrin <alex@isovalent.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,8 @@ updates:
     directory: /
     schedule:
       interval: weekly
+    commit-message:
+      prefix: "vendor:"
     open-pull-requests-limit: 1
     rebase-strategy: disabled
     ignore:
@@ -15,6 +17,8 @@ updates:
     directory: /
     schedule:
       interval: weekly
+    commit-message:
+      prefix: "ci:"
     open-pull-requests-limit: 1
     rebase-strategy: disabled
     labels:
