--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,7 @@ updates:
     labels:
     - kind/enhancement
     - release-note/misc
+    - priority/release-blocker
   - package-ecosystem: github-actions
     directory: /
     schedule:
@@ -24,3 +25,4 @@ updates:
     labels:
     - kind/enhancement
     - release-note/misc
+    - priority/release-blocker
