ci: update golangci-lint to v1.52.2
Enable the new gocheckcompilerdirectives and musttag linters as well.

Signed-off-by: Robin Hahling <robin.hahling@gw-computing.net>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -17,6 +17,7 @@ linters:
     - durationcheck
     - errchkjson
     - errname
+    - gocheckcompilerdirectives
     - gocritic
     - goerr113
     - gofmt
@@ -31,6 +32,7 @@ linters:
     - interfacebloat
     - makezero
     - misspell
+    - musttag
     - nakedret
     - nilerr
     - noctx
