ci: let renovate handle deps updates in integration tests
Signed-off-by: Robin Hahling <robin.hahling@gw-computing.net>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -198,7 +198,7 @@
       // similar to the examples shown here:
       //   https://docs.renovatebot.com/modules/manager/regex/#advanced-capture
       "matchStrings": [
-        "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s+.+version: +['\"]?(?<currentValue>[^\\s'\"]+)['\"]?"
+        "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s+.+(?:version|VERSION): +['\"]?(?<currentValue>[^\\s'\"]+)['\"]?"
       ]
     },
     {
