--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -16,9 +16,12 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  # renovate: datasource=github-releases depName=helm/helm
   HELM_VERSION: v3.10.3
+  # renovate: datasource=github-releases depName=kubernetes-sigs/kind
   KIND_VERSION: v0.17.0
   KIND_CONFIG: .github/kind-config.yaml
+  # renovate: datasource=github-releases depName=cilium/cilium
   CILIUM_VERSION: 1.12.5
   CILIUM_VALUES: .github/cilium-values.yaml
 
