--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,11 +4,11 @@ name: Run static checks and unit tests
 on:
   push:
     branches:
-      - master
+      - main
       - v*
   pull_request:
     branches:
-    - master
+    - main
     - v*
 
 concurrency:
