Renovate: Attempt to update Makefile golang with other Go deps
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -126,6 +126,7 @@
       "groupName": "golang",
       "matchPackageNames": [
         "docker.io/library/golang",
+        "library/golang",
         "go",
         "golang"
       ],
@@ -135,6 +136,7 @@
       "groupName": "golang stable",
       "matchPackageNames": [
         "docker.io/library/golang",
+        "library/golang",
         "go",
         "golang"
       ],
