ci: enable new linters
Signed-off-by: Robin Hahling <robin.hahling@gw-computing.net>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -39,11 +39,14 @@ linters:
     - noctx
     - nosprintfhostport
     - predeclared
+    - protogetter
     - reassign
     - revive
+    - sloglint
     - staticcheck
     - tagalign
     - tenv
+    - testifylint
     - typecheck
     - unconvert
     - unparam
